--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,7 @@
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: #22493B;
-  --primary-foreground: oklch(0.985 0 0);
+  --primary-foreground: #36574C;
   --secondary: #C18956;
   --secondary-foreground: #d6a277;
   --muted: oklch(0.97 0 0);
@@ -64,8 +64,8 @@
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-1: #E3E8E6;
+  --chart-2: #f9ede3;
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
