--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,7 +117,36 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+/* Aplicando globalmente usando as cores do Tailwind v4 */
+@layer base {
+  * {
+    /* O Firefox já aceita estas propriedades padrão */
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-primary) var(--color-background);
+  }
+
+  /* Para Chrome, Safari e Edge */
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: var(--color-zinc-100);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: var(--color-primary);
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--color-primary-dark);
+    /* ajuste conforme sua paleta */
   }
 }
